<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agendar"
            android:icon="@drawable/anio"
            android:title="@string/menu_agendar" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/articulo2"
            android:title="@string/menu_historial" />

        <item
            android:id="@+id/nav_micuenta"
            android:icon="@drawable/usuariocolorsuave"
            android:title="@string/menu_micuenta" />

        <item
            android:id="@+id/nav_politicas"
            android:icon="@drawable/politicas"
            android:title="@string/menu_politicas" />

        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/salir128"
            android:title="@string/menu_cerrar" />
    </group>
</menu>